Add uuid6 uuid7 uuid8

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "pyuuid"
+name = "uuid-utils"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "_pyuuid"
+name = "_uuid_utils"
 crate-type = ["cdylib"]
 
 [package.metadata.maturin]
-name = "pyuuid._pyuuid"
+name = "uuid_utils._uuid_utils"
 
 [dependencies]
 pyo3 = { version = "0.18.1", features = ["extension-module"] }
