--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=0.14,<0.15"]
 build-backend = "maturin"
 
 [project]
-name = "pyuuid"
+name = "uuid_utils"
 requires-python = ">=3.7"
 classifiers = [
     "Development Status :: 3 - Alpha",
