--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,31 +3,56 @@ on:
     branches:
       - main
     tags:
-      - '*'
+      - "*"
   pull_request:
   workflow_dispatch:
 
 permissions:
   contents: read
 
+env:
+  RUSTFLAGS: "--cfg uuid_unstable"
+
 jobs:
-  linux:
+  lint:
+    name: Check code quality
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [x86_64, aarch64, armv7]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Check code
+        run: |
+          black --check .
+          isort --check .
+          mypy .
+          ruff .
+  linux:
+    name: "Linux: ${{ matrix.target }} Python: ${{ matrix.python-version }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64, aarch64, armv7]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "${{ matrix.python-version }}"
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
-          sccache: 'true'
+          sccache: "true"
           manylinux: auto
+      - name: Run tests
+        run: pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -35,6 +60,7 @@ jobs:
           path: dist
 
   windows:
+    name: "Windows: ${{ matrix.target }} Python: ${{ matrix.python-version }}"
     runs-on: windows-latest
     strategy:
       matrix:
@@ -43,14 +69,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "${{ matrix.python-version }}"
           architecture: ${{ matrix.target }}
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
-          sccache: 'true'
+          sccache: "true"
+      - name: Run tests
+        run: pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -58,6 +88,7 @@ jobs:
           path: dist
 
   macos:
+    name: "MacOS: ${{ matrix.target }} Python: ${{ matrix.python-version }}"
     runs-on: macos-latest
     strategy:
       matrix:
@@ -66,13 +97,17 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "${{ matrix.python-version }}"
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
-          sccache: 'true'
+          sccache: "true"
+      - name: Run tests
+        run: pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -80,6 +115,7 @@ jobs:
           path: dist
 
   sdist:
+    name: Source Distribution
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -98,7 +134,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [linux, windows, macos, sdist]
+    needs: [lint, linux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v3
         with:
