--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check code
         run: |
           black --check .
-          isort --check .
+          isort --check --project=uuid_utils .
           mypy .
           ruff .
   linux:
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        target: [x86_64]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
@@ -50,7 +50,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          args: --release -i python${{ matrix.python-version }} --out dist --find-interpreter
           sccache: "true"
           manylinux: auto
       - name: Install uuid_utils
@@ -63,36 +63,36 @@ jobs:
           name: wheels
           path: dist
 
-  # windows:
-  #   name: "Windows: ${{ matrix.target }} Python: ${{ matrix.python-version }}"
-  #   runs-on: windows-latest
-  #   strategy:
-  #     matrix:
-  #       target: [x64, x86]
-  #       python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "${{ matrix.python-version }}"
-  #         architecture: ${{ matrix.target }}
-  #     - name: Install dependencies
-  #       run: pip install -r requirements.txt
-  #     - name: Build wheels
-  #       uses: PyO3/maturin-action@v1
-  #       with:
-  #         target: ${{ matrix.target }}
-  #         args: --release --out dist --find-interpreter
-  #         sccache: "true"
-  #     - name: Install uuid_utils
-  #       run: pip install uuid_utils --no-index --find-links dist --force-reinstall
-  #     - name: Run tests
-  #       run: pytest -v .
-  #     - name: Upload wheels
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: wheels
-  #         path: dist
+  windows:
+    name: "Windows: ${{ matrix.target }} Python: ${{ matrix.python-version }}"
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target: [x64, x86]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "${{ matrix.python-version }}"
+          architecture: ${{ matrix.target }}
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist --find-interpreter
+          sccache: "true"
+      - name: Install uuid_utils
+        run: pip install uuid_utils --no-index --find-links dist --force-reinstall
+      - name: Run tests
+        run: pytest -v .
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist
 
   # macos:
   #   name: "MacOS: ${{ matrix.target }} Python: ${{ matrix.python-version }}"
