--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ authors = [
 ]
 keywords = ["rust", "uuid"]
 requires-python = ">=3.7"
-license = "BSD-3-Clause"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Programming Language :: Python",
@@ -27,7 +26,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
-dynamic = ["version"]
+dynamic = ["license", "version"]
 
 [project.urls]
 Documentation = "https://github.com/aminalaee/uuid-utils"
