--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: pip install -r requirements.txt
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -56,6 +54,7 @@ jobs:
         if: matrix.target == 'x86_64'
         run: |
           pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest
           pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -64,28 +63,32 @@ jobs:
           path: dist
 
   windows:
-    name: "Windows: ${{ matrix.target }}"
+    name: "Windows: ${{ matrix.platform.target }}"
     runs-on: windows-latest
     strategy:
       matrix:
-        target: [x64, x86]
+        platform:
+          - target: x64
+            interpreter: 3.7 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
+          - target: x86
+            interpreter: 3.7 3.8 3.9 3.10 3.11
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-          architecture: ${{ matrix.target }}
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+          architecture: ${{ matrix.platform.target }}
+      - uses: dtolnay/rust-toolchain@stable
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
-          target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -i ${{ matrix.platform.interpreter }}
           sccache: "true"
       - name: Install and test uuid_utils
         run: |
           pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest
           pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -101,8 +104,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: pip install -r requirements.txt
       - uses: dtolnay/rust-toolchain@stable
       - name: Build wheels - x86_64
         uses: PyO3/maturin-action@v1
@@ -117,6 +118,7 @@ jobs:
       - name: Install and test uuid_utils
         run: |
           pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest
           pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
