--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,19 +43,18 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: pip install -r requirements.txt
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
           sccache: "true"
           manylinux: auto
       - name: Install and test
         if: matrix.target == 'x86_64'
         run: |
           pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest
           pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -63,29 +62,149 @@ jobs:
           name: wheels
           path: dist
 
+  linux-cross:
+    name: "Linux: ${{ matrix.target }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [aarch64, armv7, s390x, ppc64le]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    - name: Build wheels
+      uses: PyO3/maturin-action@v1
+      with:
+        rust-toolchain: stable
+        target: ${{ matrix.target }}
+        manylinux: auto
+        args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
+    - uses: uraimo/run-on-arch-action@v2.3.0
+      if: matrix.target != 'ppc64'
+      name: Install built wheel
+      with:
+        arch: ${{ matrix.target }}
+        distro: ubuntu20.04
+        githubToken: ${{ github.token }}
+        install: |
+          apt-get update
+          apt-get install -y --no-install-recommends python3 python3-pip
+          pip3 install -U pip pytest
+        run: |
+          pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall
+          pytest -v .
+    - name: Upload wheels
+      uses: actions/upload-artifact@v3
+      with:
+        name: wheels
+        path: dist
+
+  musllinux:
+    name: "Linux: ${{ matrix.target }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-musl
+          - i686-unknown-linux-musl
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        architecture: x64
+    - name: Build wheels
+      uses: PyO3/maturin-action@v1
+      with:
+        rust-toolchain: stable
+        target: ${{ matrix.target }}
+        manylinux: musllinux_1_2
+        args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11
+    - name: Install built wheel
+      if: matrix.target == 'x86_64-unknown-linux-musl'
+      uses: addnab/docker-run-action@v3
+      with:
+        image: alpine:latest
+        options: -v ${{ github.workspace }}:/io -w /io
+        run: |
+          apk add py3-pip
+          pip3 install -U pip pytest
+          pip3 install uuid_utils --no-index --find-links /io/dist/ --force-reinstall
+          python3 -m pytest -v
+    - name: Upload wheels
+      uses: actions/upload-artifact@v3
+      with:
+        name: wheels
+        path: dist
+
+  musllinux-cross:
+    name: "Linux: ${{ matrix.platform.target }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          - target: aarch64-unknown-linux-musl
+            arch: aarch64
+          - target: armv7-unknown-linux-musleabihf
+            arch: armv7
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    - name: Build wheels
+      uses: PyO3/maturin-action@v1
+      with:
+        rust-toolchain: stable
+        target: ${{ matrix.platform.target }}
+        manylinux: musllinux_1_2
+        args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11
+    - uses: uraimo/run-on-arch-action@v2.3.0
+      name: Install built wheel
+      with:
+        arch: ${{ matrix.platform.arch }}
+        distro: alpine_latest
+        githubToken: ${{ github.token }}
+        install: |
+          apk add py3-pip
+          pip3 install -U pip pytest
+        run: |
+          pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall
+          python3 -m pytest -v .
+    - name: Upload wheels
+      uses: actions/upload-artifact@v3
+      with:
+        name: wheels
+        path: dist
+
   windows:
-    name: "Windows: ${{ matrix.target }}"
+    name: "Windows: ${{ matrix.platform.target }}"
     runs-on: windows-latest
     strategy:
       matrix:
-        target: [x64, x86]
+        platform:
+          - target: x64
+            interpreter: 3.7 3.8 3.9 3.10 3.11
+          - target: x86
+            interpreter: 3.7 3.8 3.9 3.10 3.11
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-          architecture: ${{ matrix.target }}
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+          architecture: ${{ matrix.platform.target }}
+      - uses: dtolnay/rust-toolchain@stable
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
-          target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -i ${{ matrix.platform.interpreter }}
           sccache: "true"
       - name: Install and test uuid_utils
         run: |
           pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest
           pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -101,22 +220,21 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: pip install -r requirements.txt
       - uses: dtolnay/rust-toolchain@stable
       - name: Build wheels - x86_64
         uses: PyO3/maturin-action@v1
         with:
           target: x86_64
-          args: --release --out dist --find-interpreter
+          args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
           sccache: "true"
       - name: Build wheels - universal2
         uses: PyO3/maturin-action@v1
         with:
-          args: --release --out dist --find-interpreter --universal2
+          args: --release --out dist --universal2 -i 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
       - name: Install and test uuid_utils
         run: |
           pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest
           pytest -v .
       - name: Upload wheels
         uses: actions/upload-artifact@v3
