--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,36 +69,36 @@ jobs:
       matrix:
         target: [aarch64, armv7, s390x, ppc64le]
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    - name: Build wheels
-      uses: PyO3/maturin-action@v1
-      with:
-        rust-toolchain: stable
-        target: ${{ matrix.target }}
-        manylinux: auto
-        args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
-    - uses: uraimo/run-on-arch-action@v2.3.0
-      if: matrix.target != 'ppc64'
-      name: Install built wheel
-      with:
-        arch: ${{ matrix.target }}
-        distro: ubuntu20.04
-        githubToken: ${{ github.token }}
-        install: |
-          apt-get update
-          apt-get install -y --no-install-recommends python3 python3-pip
-          pip3 install -U pip pytest
-        run: |
-          pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall
-          pytest -v .
-    - name: Upload wheels
-      uses: actions/upload-artifact@v3
-      with:
-        name: wheels
-        path: dist
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          rust-toolchain: stable
+          target: ${{ matrix.target }}
+          manylinux: auto
+          args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
+      - uses: uraimo/run-on-arch-action@v2.3.0
+        if: matrix.target != 'ppc64'
+        name: Install built wheel
+        with:
+          arch: ${{ matrix.target }}
+          distro: ubuntu20.04
+          githubToken: ${{ github.token }}
+          install: |
+            apt-get update
+            apt-get install -y --no-install-recommends python3 python3-pip
+            pip3 install -U pip pytest
+          run: |
+            pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall
+            pytest -v .
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist
 
   musllinux:
     name: "Linux: ${{ matrix.target }}"
@@ -109,34 +109,34 @@ jobs:
           - x86_64-unknown-linux-musl
           - i686-unknown-linux-musl
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        architecture: x64
-    - name: Build wheels
-      uses: PyO3/maturin-action@v1
-      with:
-        rust-toolchain: stable
-        target: ${{ matrix.target }}
-        manylinux: musllinux_1_2
-        args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11
-    - name: Install built wheel
-      if: matrix.target == 'x86_64-unknown-linux-musl'
-      uses: addnab/docker-run-action@v3
-      with:
-        image: alpine:latest
-        options: -v ${{ github.workspace }}:/io -w /io
-        run: |
-          apk add py3-pip
-          pip3 install -U pip pytest
-          pip3 install uuid_utils --no-index --find-links /io/dist/ --force-reinstall
-          python3 -m pytest -v
-    - name: Upload wheels
-      uses: actions/upload-artifact@v3
-      with:
-        name: wheels
-        path: dist
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          architecture: x64
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          rust-toolchain: stable
+          target: ${{ matrix.target }}
+          manylinux: musllinux_1_2
+          args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11
+      - name: Install built wheel
+        if: matrix.target == 'x86_64-unknown-linux-musl'
+        uses: addnab/docker-run-action@v3
+        with:
+          image: alpine:latest
+          options: -v ${{ github.workspace }}:/io -w /io
+          run: |
+            apk add py3-pip
+            pip3 install -U pip pytest
+            pip3 install uuid_utils --no-index --find-links /io/dist/ --force-reinstall
+            python3 -m pytest -v
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist
 
   musllinux-cross:
     name: "Linux: ${{ matrix.platform.target }}"
@@ -149,34 +149,34 @@ jobs:
           - target: armv7-unknown-linux-musleabihf
             arch: armv7
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    - name: Build wheels
-      uses: PyO3/maturin-action@v1
-      with:
-        rust-toolchain: stable
-        target: ${{ matrix.platform.target }}
-        manylinux: musllinux_1_2
-        args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11
-    - uses: uraimo/run-on-arch-action@v2.3.0
-      name: Install built wheel
-      with:
-        arch: ${{ matrix.platform.arch }}
-        distro: alpine_latest
-        githubToken: ${{ github.token }}
-        install: |
-          apk add py3-pip
-          pip3 install -U pip pytest
-        run: |
-          pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall
-          python3 -m pytest -v .
-    - name: Upload wheels
-      uses: actions/upload-artifact@v3
-      with:
-        name: wheels
-        path: dist
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          rust-toolchain: stable
+          target: ${{ matrix.platform.target }}
+          manylinux: musllinux_1_2
+          args: --release --out dist -i 3.7 3.8 3.9 3.10 3.11
+      - uses: uraimo/run-on-arch-action@v2.3.0
+        name: Install built wheel
+        with:
+          arch: ${{ matrix.platform.arch }}
+          distro: alpine_latest
+          githubToken: ${{ github.token }}
+          install: |
+            apk add py3-pip
+            pip3 install -U pip pytest
+          run: |
+            pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall
+            python3 -m pytest -v .
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist
 
   windows:
     name: "Windows: ${{ matrix.platform.target }}"
@@ -185,7 +185,7 @@ jobs:
       matrix:
         platform:
           - target: x64
-            interpreter: 3.7 3.8 3.9 3.10 3.11
+            interpreter: 3.7 3.8 3.9 3.10 3.11 pypy3.8 pypy3.9
           - target: x86
             interpreter: 3.7 3.8 3.9 3.10 3.11
     steps:
