--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ name = "uuid_utils"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.18.2", features = ["extension-module"] }
+pyo3 = { version = "0.18.2", features = ["extension-module", "generate-import-lib"] }
 uuid = { version = "1.3.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "fast-rng"]}
