--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: Check code
         run: |
-          black --check .
+          black --check --diff .
           isort --check --project=uuid_utils .
           mypy .
           ruff .
