--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,8 @@ jobs:
           run: |
             apk add py3-pip
             pip3 install -U pip pytest
+            python3 -m venv venv
+            . venv/bin/activate
             pip3 install uuid_utils --no-index --find-links /io/dist/ --force-reinstall
             python3 -m pytest -v
       - name: Upload wheels
