--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Check code
-        run: |
-          make lint
+        run: make lint
+      - name: Check docs
+        run: make docs_build
 
   linux:
     name: "Linux: ${{ matrix.target }}"
@@ -251,6 +252,10 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: wheels
+      - name: Build and publish docs
+        run: |
+          pip install -r requirements.txt
+          make docs_build && make docs_deploy
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
         env:
