--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,16 +31,17 @@ jobs:
         run: make docs_build
 
   linux:
-    name: "Linux: ${{ matrix.target }}"
+    name: "Linux: ${{ matrix.target }} Python ${{ matrix.python-version }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
         target: [x86_64, i686]
+        python-version: ["3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "${{ matrix.python-version }}"
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
