--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,6 @@ on:
       - "*"
   pull_request:
 
-permissions:
-  contents: read
-
 env:
   RUSTFLAGS: "--cfg uuid_unstable"
 
@@ -253,10 +250,6 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: wheels
-      - name: Build and publish docs
-        run: |
-          pip install -r requirements.txt
-          make docs_build && make docs_deploy
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
         env:
@@ -264,3 +257,15 @@ jobs:
         with:
           command: upload
           args: --skip-existing *
+
+  docs:
+    name: Publish docs
+    runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
+    needs: [release]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build and publish docs
+        run: |
+          pip install -r requirements.txt
+          make docs_build && make docs_deploy
