Add job ID to uploaded artifact names
Using only the job index of strategy as part of the artifact name still causes duplicate names after the first job succeeds, and duplicate names are errors in `actions/upload-artifact@v4`. See https://github.com/actions/download-artifact/blob/main/docs/MIGRATION.md#multiple-uploads-to-the-same-named-artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ strategy.job-index }}
+          name: wheels-linux-${{ strategy.job-index }}
           path: dist
 
   linux-cross:
@@ -93,7 +93,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ strategy.job-index }}
+          name: wheels-linux-cross-${{ strategy.job-index }}
           path: dist
 
   musllinux:
@@ -131,7 +131,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ strategy.job-index }}
+          name: wheels-musllinux-${{ strategy.job-index }}
           path: dist
 
   musllinux-cross:
@@ -157,7 +157,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ strategy.job-index }}
+          name: wheels-musllinux-cross-${{ strategy.job-index }}
           path: dist
 
   windows:
@@ -191,7 +191,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ strategy.job-index }}
+          name: wheels-windows-${{ strategy.job-index }}
           path: dist
 
   macos:
