--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "uuid_utils"
-description = "Drop-in replacement for Python UUID in Rust"
+description = "Drop-in replacement for Python UUID with bindings in Rust"
 authors = [{ name = "Amin Alaee", email = "me@aminalaee.dev" }]
 keywords = ["rust", "uuid"]
 requires-python = ">=3.9"
