--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,15 +169,15 @@ jobs:
           - target: x64
             os: windows-latest
             py_arch: 'x64'
-            interpreter: 3.10 3.11 3.12 3.13 pypy3.9 pypy3.10
+            interpreter: 3.13 pypy3.9 pypy3.10
           - target: x86
             py_arch: 'x86'
             os: windows-latest
-            interpreter: 3.10 3.11 3.12
+            interpreter: 3.12
           - target: aarch64
             py_arch: 'arm64'
             os: windows-11-arm
-            interpreter: '3.10 3.11 3.12'
+            interpreter: '3.13'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
